Site-wide styling updates.

--- a/themes/kblog/scss/_overrides.scss
+++ b/themes/kblog/scss/_overrides.scss
@@ -1,5 +1,6 @@
 // @todo these should be their own CSS files and only included when
 // specific Drupal libraries are used.
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 @import "component/alert";
 @import "component/ajax";
 @import "component/field";
