--- a/modules/contrib/facebook_comments/templates/facebook-comments-field.html.twig
+++ b/modules/contrib/facebook_comments/templates/facebook-comments-field.html.twig
@@ -1,9 +1,20 @@
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) {return;}
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/{{ lang }}/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, "script", "facebook-jssdk"));</script>
+<script>(function (d, s, id) {
+        var eu_cookie_status = window.readCookie('cookie-agreed');
+        eu_cookie_status = parseInt(eu_cookie_status);
+        if (isNaN(eu_cookie_status)) {
+            eu_cookie_status = null;
+        }
+        var eu_cookie_agreed = (eu_cookie_status === 1 || eu_cookie_status === 2);
+        if (eu_cookie_agreed) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/{{ lang }}/all.js#xfbml=1";
+            fjs.parentNode.insertBefore(js, fjs);
+        }
+    }(document, "script", "facebook-jssdk"));</script>
 <div class="fb-comments {{ class }}" data-href="{{ url }}" data-num-posts="{{ amount }}" data-width="{{ width }}" data-colorscheme="{{ style }}"></div>
