--- a/modules/contrib/eu_cookie_compliance/css/eu_cookie_compliance.bare.css
+++ b/modules/contrib/eu_cookie_compliance/css/eu_cookie_compliance.bare.css
@@ -32,13 +32,20 @@
 .eu-cookie-compliance-default-button,
 .eu-cookie-compliance-secondary-button,
 .eu-cookie-compliance-more-button,
-.eu-cookie-compliance-hide-button {
+.eu-cookie-compliance-hide-button,
+.eu-cookie-withdraw-tab {
   cursor: pointer;
 }
 
 .eu-cookie-compliance-message {
   float: left; /* LTR */
   max-width: 60%;
+}
+
+.eu-cookie-withdraw-wrapper.sliding-popup-top,
+.eu-cookie-withdraw-wrapper.sliding-popup-top .eu-cookie-withdraw-tab,
+.eu-cookie-withdraw-wrapper.sliding-popup-top .eu-cookie-withdraw-banner {
+  transform: scaleY(-1);
 }
 
 [dir="rtl"] .eu-cookie-compliance-message {
