--- a/modules/contrib/eu_cookie_compliance/css/eu_cookie_compliance.css
+++ b/modules/contrib/eu_cookie_compliance/css/eu_cookie_compliance.css
@@ -60,7 +60,8 @@
 
 .eu-cookie-compliance-default-button,
 .eu-cookie-compliance-hide-button,
-.eu-cookie-compliance-more-button-thank-you {
+.eu-cookie-compliance-more-button-thank-you,
+.eu-cookie-withdraw-button {
   cursor: pointer;
   margin-right: 5px;
   margin-top: 1em;
@@ -97,7 +98,8 @@
 
 .eu-cookie-compliance-default-button:hover,
 .eu-cookie-compliance-hide-button:hover,
-.eu-cookie-compliance-more-button-thank-you:hover {
+.eu-cookie-compliance-more-button-thank-you:hover,
+.eu-cookie-withdraw-button:hover {
   background-color: #dfdfdf;
   background-image: -moz-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #dfdfdf), color-stop(100%, #ededed));
@@ -109,7 +111,8 @@
 
 .eu-cookie-compliance-default-button:active,
 .eu-cookie-compliance-hide-button:active,
-.eu-cookie-compliance-more-button-thank-you:active {
+.eu-cookie-compliance-more-button-thank-you:active,
+.eu-cookie-withdraw-button:active {
   position: relative;
   top: 1px;
 }
@@ -150,6 +153,27 @@
 .eu-cookie-compliance-message p {
   font-size: 12px;
   display: inline;
+}
+
+.eu-cookie-withdraw-tab {
+  padding: 4px 7px;
+  cursor: pointer;
+}
+
+.sliding-popup-bottom .eu-cookie-withdraw-tab {
+  border-width: 2px 2px 0;
+  border-radius: 5px 5px 0 0;
+}
+
+.sliding-popup-top .eu-cookie-withdraw-tab {
+  border-width: 0 2px 2px;
+  border-radius: 0 0 5px 5px;
+}
+
+.eu-cookie-withdraw-wrapper.sliding-popup-top,
+.eu-cookie-withdraw-wrapper.sliding-popup-top .eu-cookie-withdraw-tab,
+.eu-cookie-withdraw-wrapper.sliding-popup-top .eu-cookie-withdraw-banner {
+  transform: scaleY(-1);
 }
 
 @media screen and (max-width: 600px) {
